# movies-diary

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  architecture.mmd  deploy.sh  docker-compose.yml  movies-diary.insomnia.json  overview.md
crates/adapters/activitypub/: Cargo.toml
crates/adapters/activitypub-base/: Cargo.toml
crates/adapters/activitypub-base/src/: activities.rs  actor_handler.rs  actors.rs  content.rs  data.rs  error.rs  federation.rs  followers_handler.rs  inbox.rs  lib.rs  nodeinfo.rs  outbox.rs  repository.rs  service.rs  urls.rs  user.rs  webfinger.rs
crates/adapters/activitypub/src/: activities.rs  actor_handler.rs  actors.rs  composite_handler.rs  data.rs  error.rs  event_handler.rs  federation.rs  federation_event_bridge.rs  followers_handler.rs  goal_handler.rs  inbox.rs  instance_actor.rs  lib.rs  objects.rs  outbox.rs  port.rs  remote_review_repository.rs  repository.rs  review_handler.rs  service.rs  social_adapter.rs  urls.rs  user_adapter.rs  watchlist_handler.rs  webfinger.rs
crates/adapters/auth/: Cargo.toml
crates/adapters/auth/src/: lib.rs
crates/adapters/export/: Cargo.toml
crates/adapters/export/src/: lib.rs
crates/adapters/image-converter/: Cargo.toml
crates/adapters/image-converter/src/: backfill.rs  config.rs  handler.rs  lib.rs
crates/adapters/importer/: Cargo.toml
crates/adapters/importer/src/: error.rs  lib.rs  mapper.rs  types.rs
crates/adapters/nats/: Cargo.toml
crates/adapters/nats/src/: config.rs  consumer.rs  lib.rs  payload.rs  publisher.rs  subject.rs
crates/adapters/object-storage/: Cargo.toml
crates/adapters/object-storage/src/: config.rs  lib.rs
crates/adapters/poster-storage/: Cargo.toml
crates/adapters/poster-storage/src/: config.rs  lib.rs
crates/adapters/postgres/: Cargo.toml
crates/adapters/postgres-federation/: Cargo.toml
crates/adapters/postgres-federation/src/: activity.rs  actor.rs  ap_content.rs  blocklist.rs  federated_profile.rs  follow.rs  lib.rs  remote_goals.rs  review.rs  social.rs  watchlist.rs
crates/adapters/postgres-search/: Cargo.toml
crates/adapters/postgres-search/src/: lib.rs
crates/adapters/postgres/migrations/: 0001_initial.sql  0002_import.sql  0009_user_profile.sql  0010_ap_remote_actor_avatar.sql  0012_blocked_domains.sql  0013_blocked_actors.sql  0014_movie_profiles.sql  0015_search.sql  0016_watchlist.sql  0017_ap_remote_watchlist.sql  0018_remote_actor_outbox_url.sql  0019_profile_extended.sql  0020_kap_v03.sql  0022_instance_actor.sql  0023_watch_events.sql  0024_wrap_up.sql  0025_goals.sql  0026_person_enrichment.sql  0027_refresh_sessions.sql  0028_federation_privacy.sql  0029_watch_medium.sql
crates/adapters/postgres/src/: ap_content.rs  diary.rs  goals.rs  image_ref.rs  import_profile.rs  import_session.rs  lib.rs  models.rs  movie.rs  movie_dedup.rs  persons.rs  profile.rs  profile_fields.rs  refresh_sessions.rs  remote_goals.rs  review.rs  stats.rs  user_settings.rs  users.rs  watch_event.rs  watchlist.rs  wrapup.rs
crates/adapters/sqlite/: Cargo.toml
crates/adapters/sqlite-event-queue/: Cargo.toml
crates/adapters/sqlite-event-queue/migrations/: 0001_event_queue.sql
crates/adapters/sqlite-event-queue/src/: lib.rs  migrations.rs  payload.rs
crates/adapters/sqlite-federation/: Cargo.toml
crates/adapters/sqlite-federation/src/: activity.rs  actor.rs  ap_content.rs  blocklist.rs  federated_profile.rs  follow.rs  lib.rs  remote_goals.rs  review.rs  social.rs  watchlist.rs
crates/adapters/sqlite/.sqlx/: query-026e2afeb573707cb360fcdab8f6137aabfaf603b5ed57b98ac2888b4a0389ff.json  query-0acf3515a4d1bef7a2458d878481ba3b11c9f252311579f7daba335f70d78f07.json  query-106b5b65162314c47217c26b7e89194094e10122ea596e8d9323968e600635a9.json  query-1417a8a295bc966637eb7e68e088148a7bef09fb1a3c3ea44d25da32c3908472.json  query-1c70d5d455e5ab3dfb68d35ce5255c7e0e86b9f6549ae8ae09247806f1321086.json  query-1dd3efb043635e638f1c3d72923a4ccfb9c9810baee06cfac5ad4af5749e4c6e.json  query-1edf77b936b825139735e4f92bc472031e3231235ca5fe40732d7bdfddc4cbba.json  query-34a0a7b5e6a7f2b97b59e9de6a34b41a7128a465c0957915c7ed7031c6b83fb0.json  query-47f7cf95ce3450635b643ab710cadba96f40319140834d510bc5207b2552e055.json  query-5bde1c64a1dec54f348058c9d93842676aa3149bdfc4012f3f3318677a56336d.json  query-5e447e9558515934d8f0c08e91342c0df0b29101223f370a126fb0ee76e3b9bd.json  query-7d7e23355ee0e442f2aa27e898dcfa40bdc4b09391afe04325f076157d9d84aa.json  query-8a70f21c39d203867c06dc0bf74a54745b3331b84ce9a2178f7812f1ed7262cc.json  query-a01336632a54099e31686a9cbe6fc53fef1299fc7c7b52be44f99c2302490a22.json  query-aca9e7aaa32c23b4de3f5048d60340e978d31a36be9121da3c59378f2fc1ed8e.json  query-ae983138ad90fda3794b784fbf62c31fddcf182850782e9bfbc4ff3ee8b7d4bb.json  query-af883f8b78f185077e2d3dcfaa0a6e62fbdfbf00c97c9b33b699dc631476181d.json  query-bf4aaf630ebefde88d87a95c257bbeafaf39e2f53611dab435d485648eb7e598.json  query-cca022ac6275f2b1aaf63a14420897074c8ff4cdd1d3e9a13ef4b9dd5346d12a.json  (+4 more)
crates/adapters/sqlite/src/: diary.rs  (+23 more)
crates/adapters/tmdb-enrichment/: Cargo.toml
crates/adapters/wrapup-renderer/: Cargo.toml
crates/application/: Cargo.toml
crates/application/src/: commands.rs  config.rs  context.rs  event_handlers.rs  jobs.rs  lib.rs  movie_discovery_indexer.rs  movie_resolver.rs  ports.rs  queries.rs  search_cleanup.rs  test_helpers.rs  worker.rs
crates/doc/: Cargo.toml
crates/doc/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  events.rs  lib.rs  ports.rs  testing.rs  value_objects.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: context.rs  csrf.rs  dtos.rs  errors.rs  event_handlers.rs  extractors.rs  factory.rs  forms.rs  handlers.rs  lib.rs  main.rs  openapi.rs  ports.rs  render.rs  routes.rs  state.rs
crates/presentation/tests/: api_test.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  client.rs  config.rs  lib.rs  main.rs  ui.rs
crates/worker/: Cargo.toml
crates/worker/src/: db.rs  event_bus.rs  follow_backfill_handler.rs  main.rs
(+686 files in other folders)
