[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
domain = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

[features]
xlsx = []
federation = []

[dev-dependencies]
tokio = { workspace = true }
