[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
domain = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }

[features]
xlsx = []
federation = []

[dev-dependencies]
tokio = { workspace = true }
domain = { workspace = true, features = ["test-helpers"] }
