[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }

email_address = "0.2.9"

[features]
test-helpers = []
