[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"

keyring = { version = "3", features = ["apple-native"] }
directories = "6"
csv = "1"

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
