[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[features]
default = []
macos      = ["dep:apple-native-keyring-store"]
linux-zbus = ["dep:zbus-secret-service-keyring-store"]
windows    = ["dep:windows-native-keyring-store"]
sqlite     = ["dep:db-keystore"]

[dependencies]
ratatui = "0.30.0"

keyring-core = "1.0.0"
directories = "6"
csv = "1"

apple-native-keyring-store        = { version = "1.0.0", optional = true, features = ["keychain"] }
zbus-secret-service-keyring-store = { version = "1.0.0", optional = true }
windows-native-keyring-store      = { version = "1.0.0", optional = true }
db-keystore                       = { version = "0.4.1", optional = true }

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
