[package]
name = "activitypub"
version = "0.1.0"
edition = "2024"

[dependencies]
activitypub-base = { workspace = true }
domain = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

activitypub_federation = "0.7.0-beta.11"
url = { version = "2", features = ["serde"] }
