[package]
name = "activitypub"
version = "0.1.0"
edition = "2024"

[dependencies]
k-ap = { version = "0.4.2", registry = "gitea" }
domain = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

url = { version = "2", features = ["serde"] }
ammonia = "4"
