[package]
name = "export"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
tokio = { workspace = true }
