[package]
name = "importer"
version = "0.1.0"
edition = "2024"

[features]
xlsx = ["dep:calamine"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
csv = { workspace = true }
calamine = { version = "0.26", optional = true }
