[package]
name = "nats"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.48.0"

domain = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
