[package]
name = "object-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
infer = "0.19.0"

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
