[package]
name = "poster-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
object_store = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
