[package]
name = "postgres-federation"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "macros",
    "chrono",
] }
activitypub      = { workspace = true }
activitypub-base = { workspace = true }
domain           = { workspace = true }
uuid             = { workspace = true }
chrono           = { workspace = true }
tracing          = { workspace = true }
async-trait      = { workspace = true }
anyhow           = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
