[package]
name = "sqlite-federation"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
activitypub = { workspace = true }
activitypub-base = { workspace = true }
domain = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
