[package]
name = "sqlite-federation"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
activitypub = { workspace = true }
k-ap        = { git = "https://git.gabrielkaszewski.dev/GKaszewski/k-ap.git", tag = "v0.1.2" }
domain = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
