[package]
name = "tmdb-enrichment"
version = "0.1.0"
edition = "2024"

[dependencies]
application = { workspace = true }
domain      = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
