[package]
name = "wrapup-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
image = { version = "0.25", features = ["avif"] }
imageproc = "0.25"
ab_glyph = "0.2"
tokio = { workspace = true, features = ["process"] }
tempfile = "3"
